samples/_failures_safe/1761446608_608e48_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_503a3287.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_503a3287.c:127:20: error: expected declaration or statement at end of input
  127 |                    analyzer->entries[i].level, analyzer->entries[i].message);
      |                    ^~~~~~~~
./samples/SAFE/__tmp_503a3287.c:127:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_503a3287.c:127:20: error: expected declaration or statement at end of input
